--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,30 @@
+:root {
+  --icon-font: "Inter", Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
+}
+
+@font-face {
+  font-family: "Neue Montreal";
+  src: url("/fonts/subset-NeueMontreal-Regular.woff2") format("woff2"),
+    url("/fonts/subset-NeueMontreal-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 .marquee-additional-style path {
   fill: rgba(250, 250, 250, 0.125);
+}
+.grid-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(72px, 1fr));
+}
+
+.grid-wrapper .char {
+  aspect-ratio: 1/1;
+}
+
+.grid-wrapper .char span {
+  font-family: var(--icon-font);
 }
