--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,5 @@
 :root {
-  --icon-font: "Inter", Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji";
+  --icon-font: var(--font-inter);
 }
 
 @font-face {
